Add missing endpoints for homeworks 3/4, minor fixes to UI
