# service/api/api-handler.go
@@ -13,6 +13,8 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.GET("/results/:studentid/git", rt.wrap(rt.getGitLog))
 	rt.router.GET("/results/:studentid/openapi", rt.wrap(rt.getOpenAPILog))
 	rt.router.GET("/results/:studentid/golang", rt.wrap(rt.getGoLog))
+	rt.router.GET("/results/:studentid/vue", rt.wrap(rt.getVueLog))
+	rt.router.GET("/results/:studentid/docker", rt.wrap(rt.getDockerLog))
 
 	// Special routes
 	rt.router.GET("/liveness", rt.liveness)
